refactoring, delete alchemic

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Database credentials
-DATABASE_PASSWORD=your_password_here
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 
 # Optional: Override config values
-# DATABASE_HOST=localhost
 # OLLAMA_BASE_URL=http://localhost:11434
