--- a/config/prompts.yaml
+++ b/config/prompts.yaml
@@ -57,51 +57,16 @@ daily_learning_feedback:
     같은 정답률이어도 매번 다른 표현으로 작성!
 
     ### 동기부여 (motivation) 작성 규칙:
-    성장 단계에 따라, 하지만 매번 다른 표현으로:
+    성장 단계(스테이지)에 따라, 하지만 매번 다른 표현으로:
 
-    - 씨앗 (1-3개 완료): "내일은 첫 새싹이 피어날지도 몰라요 🌿"
-    - 새싹 (4-7개 완료): "물방울 하나만 더 모으면 줄기로 자랄 거예요 💧"
-    - 줄기 (8-15개 완료): "꽃잎이 열릴 준비를 하고 있어요 🌸"
-    - 꽃 (16개 이상 완료): "정원이 환하게 피었어요, 다음엔 새로운 씨앗을 심어볼까요? 🌻"
+    - 씨앗 (스테이지 1): "물방울을 모아서 새싹을 키워볼까요? 🌱"
+    - 새싹 (스테이지 2-4): "새싹이 쑥쑥 자라고 있어요! 💧"
+    - 성장한 식물 (스테이지 5-7): "식물이 튼튼하게 자라고 있어요 🌿"
+    - 열매 (스테이지 8+): "맛있는 열매가 열릴 거예요 🍎"
 
     같은 단계여도 매번 다른 표현으로 작성!
 
     모든 문장은 25자 이내, 7세 아동이 이해할 수 있는 쉬운 말로!
-
-confusion_pattern_analysis:
-  system_prompt: |
-    너는 학습 피드백 전문가야. 주어진 학습 결과 데이터를 분석해서,
-    사용자가 이해하기 쉽도록 간단하고 직관적인 문장으로 피드백을 작성해줘.
-    이모지는 사용하지 않고, 문장만으로 친근하고 부드러운 톤을 유지할 것.
-
-  user_prompt_template: |
-    다음은 한국어 발음 학습자의 답변 데이터입니다:
-
-    사용자 정보:
-    - 총 문제 수: {total_questions}
-    - 정답률: {accuracy}
-
-    혼동 패턴:
-    {confusion_patterns}
-
-    음성학적 혼동:
-    {phonetic_confusions}
-
-    이 데이터를 분석하여 다음 형식으로 결과를 제공해주세요:
-
-    {{
-        "summary": "오늘은 [총 문제 수]문제 중 [맞힌 문제 수]개를 맞추셨어요.",
-        "strengths": ["특히 잘한 부분을 한두 문장으로"],
-        "weaknesses": ["어려웠던 부분을 한두 문장으로"],
-        "recommendations": ["앞으로 어떻게 연습하면 좋은지 구체적인 행동 제안"]
-    }}
-
-    피드백에는 다음 요소를 포함해줘:
-    1) 강점: 특히 잘한 부분을 한두 문장으로
-    2) 약점: 어려웠던 부분을 한두 문장으로
-    3) 추천 학습 방향: 앞으로 어떻게 연습하면 좋은지 구체적인 행동 제안
-
-    답변은 반드시 JSON 형식으로만 제공하고, 한국어로 작성해주세요.
 
 learning_progress_analysis:
   system_prompt: |
